# tauri-plugin-mcp

./: .gitignore  Cargo.toml  README.md  mcp-config.json  package-lock.json
dist-js/: index.cjs  index.d.ts  index.js
guest-js/: index.ts
mcp-server-ts/: package-lock.json
mcp-server-ts/src/tools/: client.ts  get_dom.ts  index.ts
src/: desktop.rs  lib.rs  mobile.rs  models.rs  socket_server.rs
src/platform/: macos.rs  unix.rs
src/shared/: mod.rs
src/tools/: mod.rs  take_screenshot.rs  webview.rs
